--- a/plants.html
+++ b/plants.html
@@ -8,6 +8,25 @@
     <script src="https://kit.fontawesome.com/4f077fa759.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="topnav" id="myTopnav">
+    <a href="index.html" class="active">Super Queer Flowers</a>
+    <a href="bouquets.html">Bouquets</a>
+    <a href="plants.html">Plants</a>
+    <a href="contact.html">Contact</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
     <h1>Plants</h1>
 
     <!-- <h2>Welcome to Super Queer Flowers!</h2> -->
@@ -34,11 +53,11 @@
         <div class="desc">Single Leaves<br>only $4.99!</div>
     </div>    
 </div>
-<div id="navbar">
+<!-- <div id="navbar">
   <a id="home" href="index.html">Super Queer Flowers</a>
   <a id="bouq" href="bouquets.html">Bouquets</a>
   <a id="plants" href="plants.html">Plants</a>
-  <a id="contact" href="contact.html">Contact</a>
+  <a id="contact" href="contact.html">Contact</a> -->
     
 </div>
 <div id="navbar2">
