--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h2>Welcome to Super Queer Flowers!</h2>
       <p>Our Parent company was formed in 1901 and we grew from that fertile soil, SQ flowers was established in 1993 as a blatant attempt to soften Monsantos image and as a world leading exercise in rainbow capitalism! <br><br>We have all you could ever need for Funerals (especially Childrens).<br> 
       <br>Try our proprietary chemical resistant plants, Guaranteed to survive in whatever industrial wasteland, blasted heath or defoliated rainforest you find yourself in<br>
-      <br>Act fast, supplies are limited! Get them before the inevitable ecological collapse wipes out all plants, and with it the Human race!</p>
+      <br>Act fast, supplies are limited! Get them before the inevitable ecological collapse wipes out all plants, and with it the Human race!<br></p>
 
       
      
